--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Admin store",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node --inspect server.js",
     "serve": "nodemon server.js",
     "heroku-postbuild": "npm install && cd client && npm install --only-dev && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,9 +12,18 @@
   "author": "yeast72",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
-    "path": "^0.12.7"
+    "express-session": "^1.16.2",
+    "jwt-simple": "^0.5.6",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "pg": "^7.11.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.10.1"
   }
 }
