--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "yeast72",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "express-session": "^1.16.2",
+    "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
